// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Url renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        disabled={true}
        placeholder=" "
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        disabled={true}
        placeholder=" "
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          disabled={true}
          placeholder=" "
          type="url"
          value="https://sportsbet.io"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH cMUUVg"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH iBdanP"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH irkSfR"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        placeholder=" "
        readOnly={true}
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        placeholder=" "
        readOnly={true}
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder=" "
          readOnly={true}
          type="url"
          value="https://sportsbet.io"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-bndzKH hInqru"
        dir="rtl"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-bndzKH fLhJUV"
        dir="rtl"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH buYCCL"
          dir="rtl"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-hMtawp hRxnpO"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH hInqru"
        placeholder="medium"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH fLhJUV"
        placeholder="large"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH eIBYyS"
          placeholder="xlarge"
          type="url"
        />
        <label
          className="sc-hMtawp hAnfYh"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <input
        className="sc-bndzKH JOpgZ"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <input
        className="sc-bndzKH ecRUiK"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi kuLuHP"
      >
        <input
          className="sc-bndzKH buYCCL"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
